k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: diffy
  labels:
    app: diffy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: diffy
