k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: diffy-redirect-http-https@kubernetescrd
  name: diffy
  labels:
    app: diffy
spec:
  rules:
    - host: "diffy.ax-h.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: diffy
                port:
                  name : http
  tls:
    - hosts:
        - diffy.ax-h.com
      secretName: diffy-axh-com-tls
